@@ -252,11 +252,6 @@ public interface FSDatasetInterface extends FSDatasetMBean {
       long newGS, long expectedBlockLen) throws IOException;
   
   /**
-   * Update the block to the new generation stamp and length.  
-   */
-  public void updateBlock(Block oldblock, Block newblock) throws IOException;
-  
-  /**
    * Finalizes the block previously opened for writing using writeToBlock.
    * The block size is what is in the parameter b and it must match the amount
    *  of data written
@@ -331,14 +326,6 @@ public interface FSDatasetInterface extends FSDatasetMBean {
    */
   public void setChannelPosition(Block b, BlockWriteStreams stream, long dataOffset,
                                  long ckOffset) throws IOException;
-
-  /**
-   * Validate that the contents in the Block matches
-   * the file on disk. Returns true if everything is fine.
-   * @param b The block to be verified.
-   * @throws IOException
-   */
-  public void validateBlockMetadata(Block b) throws IOException;
 
   /**
    * checks how many valid storage volumes are there in the DataNode
